tried fixing save button on mobile

--- a/src/Components/Playlist/Playlist.css
+++ b/src/Components/Playlist/Playlist.css
@@ -53,7 +53,7 @@
       width: 90%;
       margin-left: 0;
       margin-bottom: 1em;
-      padding-bottom: 0em;
+      padding-bottom: 2em;
       min-height: 300px;
     }
   }
